services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: hieugphan/webapi:latestv3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapi
spec:
  ports:
  - targetPort: 80
    port: 5001
  selector:
    app: webapi
---
# ---------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: hieugphan/rrangular:latestv2
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular
spec:
  type: LoadBalancer
  ports:
  - targetPort: 80
    port: 4200
  selector:
    app: angular
